--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#root</h1>
-<p>Find me in app/views/static_pages/root.html.erb</p>
+<main id = "root"> 
+ <h1 class='static_home'>REACT WILL GO HERE!</h1>
+</main>
