added stylesheets and page partials

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,3 +1,11 @@
-<main id = "root"> 
+<%# <main id = "root"> 
  <h1 class='static_home'>REACT WILL GO HERE!</h1>
-</main>
+</main> %>
+
+<%= render partial: 'partials/header' %>
+<%= render partial: 'partials/main_nav' %>
+<%= render partial: 'partials/masthead' %>
+<%= render partial: 'partials/sections_nav' %>
+<%= render partial: 'partials/search_modal' %>
+<%= render partial: 'partials/main_content' %>
+<%= render partial: 'partials/footer' %>
