included rdoc in gemfile

--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -10,6 +10,6 @@
       <li><a href="https://twitter.com/suhaiyehuza"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/twitter.svg"></a></li>
       <li class="resume"><a href="assets/resume.pdf">Resume</a></li>
     </ul>
-    <p>The tikLdMonkey ©</p>
+    <p>Murmur Alley ©</p>
   </div>
 </div>
