--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -5,10 +5,10 @@
       <li><a href="#">Terms</a></li>
     </ul>
     <ul>
-      <li><a href="mailto:soyehuza@gmail.com"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/mail.svg"></a></li>
-      <li><a href="https://www.facebook.com/suhaiy"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/facebook.svg"></a></li>
-      <li><a href="https://twitter.com/suhaiyehuza"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/twitter.svg"></a></li>
-      <li class="resume"><a href="assets/resume.pdf">Resume</a></li>
+      <li><a href="mailto:soyehuza@gmail.com"><img src="#"></a></li>
+      <li><a href="https://www.facebook.com/suhaiy"><img src="#"></a></li>
+      <li><a href="https://twitter.com/suhaiyehuza"><img src="#"></a></li>
+      <li class="resume"><a href="#">Resume</a></li>
     </ul>
     <p>Murmur Alley ©</p>
   </div>
