updated partial views

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -12,7 +12,7 @@
 			<section class="col col-2-3">
 				<div class="my-video">
 					<video width="100%" height="230" controls>
-						<source src="#" type="video/mp4">
+						<source src="assets/climate.mp4" type="video/mp4">
 					</video>
 				</div>
 				<p>Cuidado: Aenean quis imperdiet lacus tempor metus.</p>
@@ -57,7 +57,7 @@
 				<p class="byline">AOL PRESHRTYSH FHSJJ</p>
 				<p>Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. </p>
 				<div class="thumbnail">
-					<img src="#" alt="app academy new york office">
+					<img src="/assets/image2.jpg" alt="app academy new york office">
 				</div>
 			</section>
 			</section>
