added config.assets.compile = true to production.rb file

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -57,7 +57,7 @@
 				<p class="byline">AOL PRESHRTYSH FHSJJ</p>
 				<p>Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. </p>
 				<div class="thumbnail">
-					<img src="/assets/image2.jpg" alt="app academy new york office">
+					<img src="/assets/image2.jpg" alt="murmur Alley image">
 				</div>
 			</section>
 			</section>
