added time laod to sidebar.js

--- a/app/views/partials/_masthead.html.erb
+++ b/app/views/partials/_masthead.html.erb
@@ -13,7 +13,7 @@
 	</div>
 	<ul class="masthead-links">
 		<li>
-			<time>Tuesday, July 18, 2017</time>
+			<time id='today'>Tuesday, July 18, 2017</time>
 		</li>
 		<li>
 			<i class="fa fa-newspaper-o"></i><a href="#">Today’s Paper</a>
