--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -12,7 +12,7 @@
 			<section class="col col-2-3">
 				<div class="my-video">
 					<video width="100%" height="230" controls>
-						<source src="assets/climate.mp4" type="video/mp4">
+						<source src="https://player.vimeo.com/video/226678225" type="video/mp4">
 					</video>
 				</div>
 				<p>Cuidado: Aenean quis imperdiet lacus tempor metus.</p>
