--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -11,9 +11,11 @@
 			</section>
 			<section class="col col-2-3">
 				<div class="my-video">
-					<video width="100%" height="230" controls>
-						<source src="https://player.vimeo.com/video/226678225" type="video/mp4">
-					</video>
+					<%# <video width="100%" height="230" controls>
+						<source src="http://player.vimeo.com/video/226678225" type="video/mp4">
+					</video> %>
+					<iframe src="https://player.vimeo.com/video/226678225" width="100%" height="230" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+					</iframe>
 				</div>
 				<p>Cuidado: Aenean quis imperdiet lacus tempor metus.</p>
 				<article>
