--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -8,7 +8,7 @@
       <li><a href="mailto:soyehuza@gmail.com"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/mail.svg"></a></li>
       <li><a href="https://www.facebook.com/suhaiy"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/facebook.svg"></a></li>
       <li><a href="https://twitter.com/suhaiyehuza"><img src="https://res.cloudinary.com/swy/image/upload/v1500279538/images/twitter.svg"></a></li>
-      <li class="resume"><a href="https://drive.google.com/open?id=0B3YmJk3--C3rLUpZQVh5MDVBb2s">Resume</a></li>
+      <li class="resume"><a href="assets/resume.pdf">Resume</a></li>
     </ul>
     <p>Murmur Alley ©</p>
   </div>
