--- a/app/views/partials/_sections_nav.html.erb
+++ b/app/views/partials/_sections_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="sections-nav">
 	<ul>
-		<li>Murmur City</li>
+		<li>MurmurAlley</li>
 		<li>San Francisco</li>
 		<li>United States</li>
 		<li>North America</li>
