--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -1,7 +1,7 @@
 <section class="main-content group">
 	<section class="main-story col col-2-3">
 			<section class="col col-1-3">
-				<a href="#"><h1>Lorem ipsum dolor sit amet, consectetur</h1></a>
+				<a href="#"><h1>Tupac Spotted on a yacht off the Sardinia</h1></a>
 				<p class="byline">NULLAM A SUSCIPIT SEM.</p>
 				<ul>
 					<li>Phasellus convallis semper turpis eu mattis. Proin vel consequat nulla. Fusce vulputate lorem erat, ut convallis turpis rutrum vitae. Donec in erat sem. Praesent mi nulla, vestibulum sed pulvinar vel, porta at massa.</li>
@@ -17,16 +17,16 @@
 					<iframe src="https://player.vimeo.com/video/226678225" width="100%" height="230" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
 					</iframe>
 				</div>
-				<p>Cuidado: Aenean quis imperdiet lacus tempor metus.</p>
+				<p>Credit: Ice and Sky Educational videos.</p>
 				<article>
 					<hr>
-					<a href="#"><header>Aliquam erat volutpat.</header></a>
+					<a href="#"><header>Miracle at Timbuktu: Oldest living human is a 172yr old blind bard on the banks of River Niger.</header></a>
 					<p class="byline">FUSCE NEC VIVERA VELIT.</p>
 					<p>Nunc ullamcorper magna ante, eu rhoncus lorem mattis ut. Phasellus lacinia, arcu ac tempor volutpat, metus tellus facilisis dui, maximus aliquam orci eros ac odio.</p>
 				</article>
 				<article>
 					<hr>
-					<a href="#"><header>Sed Vivera</header></a>
+					<a href="#"><header>MurmurAlley residents excited about landed Asteroid</header></a>
 					<p class="byline">INTEGER EGESTAS TINCUDANT EST EU TRISTIQUE.</p>
 					<p>Pellentesque pulvinar fringilla ligula, pellentesque volutpat mi. Suspendisse faucibus volutpat felis non blandit. Integer egestas tincidunt est eu tristique.</p>
 				</article>
@@ -39,7 +39,7 @@
 				<a href="#"><h2>El Opinion de Paginas</h2></a>
 			<section class="col col-1-2">
 						<p class="kicker">Op-Ed Contributor</p>
-						<a href="#"><header>How did the Incans Fly?</header></a>
+						<a href="#"><header>Did the Incas Fly?</header></a>
 						<p>
 							Sed viverra tempus ante eu faucibus. Morbi venenatis, tellus eu lacinia dapibus, mi augue rhoncus nisl, eget pulvinar dui tellus ut dui. Suspendisse fringilla tempor dictum. 
 						</p>
@@ -55,7 +55,7 @@
 			</section>
 			<section class="col col-1-2">
 				<p class="kicker">Operacions</p>
-				<a href="#"><header>Curabitur id mauris eget nibh tincidunt elementum</header></a>
+				<a href="#"><header>Sports: Azerbaijan wins the World cup</header></a>
 				<p class="byline">AOL PRESHRTYSH FHSJJ</p>
 				<p>Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. </p>
 				<div class="thumbnail">
