--- a/app/views/partials/_signup.html.erb
+++ b/app/views/partials/_signup.html.erb
@@ -8,7 +8,7 @@
 
     <div class="container">
       <div class="welcome">
-        <h3>Hello, Welcome Back to Murmur Alley!</h3>
+        <h3>Welcome to Murmur Alley!</h3>
       </div>
       <label><b>Email</b></label>
       <input type="text" placeholder="Enter Email" email="email" required>
@@ -18,9 +18,6 @@
 
       <label><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <label><b>Confirm Password</b></label>
-      <input type="password" placeholder="Enter Password Again" name="psw" required>
 
       <button class="btn-signup" type="submit">Sign Up</button>
       <input type="checkbox" checked="checked"> Remember me
