--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -1,7 +1,7 @@
 <section class="main-content group">
 	<section class="main-story col col-2-3">
 			<section class="col col-1-3">
-				<a href="#"><h1>Tupac Spotted on a yacht off the Sardinia</h1></a>
+				<a href="#"><h1>Tupac Spotted on a yacht off Sardinia</h1></a>
 				<p class="byline">NULLAM A SUSCIPIT SEM.</p>
 				<ul>
 					<li>Phasellus convallis semper turpis eu mattis. Proin vel consequat nulla. Fusce vulputate lorem erat, ut convallis turpis rutrum vitae. Donec in erat sem. Praesent mi nulla, vestibulum sed pulvinar vel, porta at massa.</li>
