added more content to pages

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -2,9 +2,12 @@
 	<section class="main-story col col-2-3">
 			<section class="col col-1-3">
 				<a href="#"><h1>Tupac Spotted on a yacht off Sardinia</h1></a>
-				<p class="byline">NULLAM A SUSCIPIT SEM.</p>
+				<p class="byline">Nicki - Rihanna beef boiling up.</p>
 				<ul>
 					<li>Phasellus convallis semper turpis eu mattis. Proin vel consequat nulla. Fusce vulputate lorem erat, ut convallis turpis rutrum vitae. Donec in erat sem. Praesent mi nulla, vestibulum sed pulvinar vel, porta at massa.</li>
+					<div class="thumbnail">
+					<img src="http://res.cloudinary.com/swy/image/upload/v1499750450/images/pexels-photo-226294.jpg" alt="murmur Alley image">
+					</div>
 					<li>Curabitur tortor lacus, consectetur ut maximus sollicitudin, tristique sed dui. Duis sodales nunc a malesuada malesuada. Nulla tincidunt vehicula felis, posuere semper elit tempor a. Pellentesque sem enim, viverra vitae ante ut, commodo convallis lacus.</li>
 				</ul>
 				<a href="#" class="comments"><i class="fa fa-message"></i>6453 Comments</a>
@@ -20,15 +23,18 @@
 				<p>Credit: Ice and Sky Educational videos.</p>
 				<article>
 					<hr>
-					<a href="#"><header>Miracle at Timbuktu: Oldest living human is a 172yr old blind bard on the banks of River Niger.</header></a>
-					<p class="byline">FUSCE NEC VIVERA VELIT.</p>
+					<a href="#"><header>Miracle at Timbuktu: Oldest living human is a 172yr old blind bard farming on the banks of the River Niger.</header></a>
+					<p class="byline">CRIMEA RETURNS TO UKRAINE IN HISTORIC DEAL.</p>
 					<p>Nunc ullamcorper magna ante, eu rhoncus lorem mattis ut. Phasellus lacinia, arcu ac tempor volutpat, metus tellus facilisis dui, maximus aliquam orci eros ac odio.</p>
 				</article>
 				<article>
 					<hr>
 					<a href="#"><header>MurmurAlley residents excited about landed Asteroid</header></a>
-					<p class="byline">INTEGER EGESTAS TINCUDANT EST EU TRISTIQUE.</p>
+					<p class="byline">Idaho Becomes the first state in the Union to leave. Welcome to the Rep of Idaho.</p>
 					<p>Pellentesque pulvinar fringilla ligula, pellentesque volutpat mi. Suspendisse faucibus volutpat felis non blandit. Integer egestas tincidunt est eu tristique.</p>
+					<div class="thumbnail">
+					<img src="http://res.cloudinary.com/swy/image/upload/v1499750530/images/pexels-photo-403005.jpg" alt="murmur Alley image">
+					</div>
 				</article>
 			</section>
 				<hr class="hr-top">
@@ -36,7 +42,7 @@
 	</section>
 	<section class="col col-1-3">
 		<section class="opinion cf">
-				<a href="#"><h2>El Opinion de Paginas</h2></a>
+				<a href="#"><h2>Opinion Pages</h2></a>
 			<section class="col col-1-2">
 						<p class="kicker">Op-Ed Contributor</p>
 						<a href="#"><header>Did the Incas Fly?</header></a>
@@ -54,18 +60,20 @@
 					</ul>
 			</section>
 			<section class="col col-1-2">
-				<p class="kicker">Operacions</p>
-				<a href="#"><header>Sports: Azerbaijan wins the World cup</header></a>
-				<p class="byline">AOL PRESHRTYSH FHSJJ</p>
+				<p class="kicker">Experiments</p>
+				<a href="#"><header>Education: iTeacher exceeds expectations</header></a>
+				<p class="byline">Iceland on the cusp of utopia?</p>
 				<p>Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. </p>
 				<div class="thumbnail">
-					<img src="/assets/image2.jpg" alt="murmur Alley image">
+					<img src="http://res.cloudinary.com/swy/image/upload/v1499749887/images/001-desk-elements-escene-vector-flat-objects-design-studio.jpg" alt="murmur Alley image">
 				</div>
 			</section>
 			</section>
 			<section class="opinion-sign-up">
 				<a href="#"><header>Opinion Today, in your Inbox</header></a>
-				<p>Each weekday, get thoughT-provoking commentary from our columnists and contributors.</p>
+				<p>Sign up for the most ridiculous fictitious news available from our amateur columnist and contributors.</p>
+				<br />
+				<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet.</p>
 				<form>
 					<section class="input-wrapper">
 						<input type="text" placeholder="Get the Opinion newsletter by email">
