included weather API

--- a/app/assets/stylesheets/partials/_masthead.scss
+++ b/app/assets/stylesheets/partials/_masthead.scss
@@ -34,6 +34,17 @@
 	margin-top: 10px;
 }
 
+#weather1 {
+	font-family: Courier New, Courier, monospace;
+	font-size: 12px;
+	text-decoration: none;
+}
+
+#weather2 {
+	font-family: Courier New, Courier, monospace;
+	font-size: 12px;
+	text-decoration: none;
+}
 
 // logo div
 .logo1 {
