--- a/app/views/partials/_masthead.html.erb
+++ b/app/views/partials/_masthead.html.erb
@@ -22,7 +22,8 @@
 			<i class="fa fa-video-camera"></i><a href="#">Video</a>
 		</li>
 		<li>
-			<button>64°F</button>
+			<button id='weather1'>64°F</button>
+			<button id='weather2'>Drizzly</button>
 		</li>
 		<li>
 			<button>AAO <strong>+98.9%</strong></button>
