refactored getWeather function

--- a/app/views/partials/_masthead.html.erb
+++ b/app/views/partials/_masthead.html.erb
@@ -13,7 +13,7 @@
 	</div>
 	<ul class="masthead-links">
 		<li>
-			<time id='today'>Tuesday, July 18, 2017</time>
+			<time id='today'>Current Time</time>
 		</li>
 		<li>
 			<i class="fa fa-newspaper-o"></i><a href="#">Today’s Paper</a>
@@ -22,11 +22,11 @@
 			<i class="fa fa-video-camera"></i><a href="#">Video</a>
 		</li>
 		<li>
-			<button id='weather1'>64°F</button>
-			<button id='weather2'>Drizzly</button>
+			<button>AAO <strong>+98.9%</strong></button>
 		</li>
 		<li>
-			<button>AAO <strong>+98.9%</strong></button>
+			<button id='weather1'>64°F</button>
+			<button id='weather2'>Scattered Showers</button>
 		</li>
 	</ul>
 </header>
