added content to main

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -50,13 +50,13 @@
 							Sed viverra tempus ante eu faucibus. Morbi venenatis, tellus eu lacinia dapibus, mi augue rhoncus nisl, eget pulvinar dui tellus ut dui. Suspendisse fringilla tempor dictum. 
 						</p>
 					<ul class="opinions-list">
-						<li>Zidane: Aenean metus magna</li>
-						<li>Messi: Nulla auctor turpis massa</li>
-						<li>Ronaldo: Vestibulum ante ipsum primis</li>
-						<li>Pele: Proin suscipit ut orci non posuere.</li>
-						<li>Eto'o: Fusce nec viverra velit.</li>
-						<li>Ronaldinho: Mauris viverra pulvinar turpis</li>
-						<li>Beckham: Pellentesque habitant morbi tristique</li>
+						<li>Merkel: Europe must unite against the Brexit</li>
+						<li>Messi: Ronaldo doesn't deserve the Ballon D'Or</li>
+						<li>Obama: I am relocating to Nairobi</li>
+						<li>Modi: The dawn of India as the next superpower</li>
+						<li>Bourdain: Food for the Martians</li>
+						<li>Gov. Chipototle: MurmurAlley should eat more pinto beans</li>
+						<li>Jolie: Brad was such a great a husband</li>
 					</ul>
 			</section>
 			<section class="col col-1-2">
