fixed twitching clock issue

--- a/app/assets/stylesheets/partials/_masthead.scss
+++ b/app/assets/stylesheets/partials/_masthead.scss
@@ -36,13 +36,19 @@
 
 #weather1 {
 	font-family: Courier New, Courier, monospace;
-	font-size: 12px;
+	font-size: 1em;
 	text-decoration: none;
 }
 
 #weather2 {
 	font-family: Courier New, Courier, monospace;
-	font-size: 12px;
+	font-size: 1em;
+	text-decoration: none;
+}
+
+#today {
+	font-family: Courier New, Courier, monospace;
+	font-size: 1em;
 	text-decoration: none;
 }
 
