updated weather and time

--- a/app/views/partials/_masthead.html.erb
+++ b/app/views/partials/_masthead.html.erb
@@ -13,7 +13,7 @@
 	</div>
 	<ul class="masthead-links">
 		<li>
-			<time id='today'>Current Time</time>
+			Local Time: <time id='today'>Current Time</time>
 		</li>
 		<li>
 			<i class="fa fa-newspaper-o"></i><a href="#">Today’s Paper</a>
@@ -25,7 +25,7 @@
 			<button>AAO <strong>+98.9%</strong></button>
 		</li>
 		<li>
-			<button id='weather1'>64°F</button>
+			Live Local Weather: <button id='weather1'>64°F</button>
 			<button id='weather2'>Scattered Showers</button>
 		</li>
 	</ul>
