updated weather and time format

--- a/app/views/partials/_masthead.html.erb
+++ b/app/views/partials/_masthead.html.erb
@@ -7,13 +7,12 @@
 			<li><a href="#">Chemistry</a></li>
 		</ul>
 	</nav>
-	<%# <img class="logo" src="assets/image1.jpg" alt="Murmur Alley"> %>
 	<div class="logo1">
 	<p class="logo2">The MurmurAlley Digest</p>
 	</div>
 	<ul class="masthead-links">
 		<li>
-			Local Time: <time id='today'>Current Time</time>
+			<time id='today'>Current Time</time>
 		</li>
 		<li>
 			<i class="fa fa-newspaper-o"></i><a href="#">Today’s Paper</a>
@@ -25,7 +24,7 @@
 			<button>AAO <strong>+98.9%</strong></button>
 		</li>
 		<li>
-			Live Local Weather: <button id='weather1'>64°F</button>
+			Weather: <button id='weather1'>64°F</button>
 			<button id='weather2'>Scattered Showers</button>
 		</li>
 	</ul>
