--- a/app/views/partials/_sections_nav.html.erb
+++ b/app/views/partials/_sections_nav.html.erb
@@ -10,7 +10,7 @@
 		<li>Education</li>
 		<li>Sports</li>
 		<li>Society</li>
-		<li><a href="#">Other</a></li>
+		<li>Other News</li>
 	</ul>
 </nav>
 <%= render "partials/search_modal" %>
