changed all http requests to https requests

--- a/app/views/partials/_main_content.html.erb
+++ b/app/views/partials/_main_content.html.erb
@@ -6,7 +6,7 @@
 				<ul>
 					<li>Phasellus convallis semper turpis eu mattis. Proin vel consequat nulla. Fusce vulputate lorem erat, ut convallis turpis rutrum vitae. Donec in erat sem. Praesent mi nulla, vestibulum sed pulvinar vel, porta at massa.</li>
 					<div class="thumbnail">
-					<img src="http://res.cloudinary.com/swy/image/upload/v1499750450/images/pexels-photo-226294.jpg" alt="murmur Alley image">
+					<img src="https://res.cloudinary.com/swy/image/upload/v1499750450/images/pexels-photo-226294.jpg" alt="murmur Alley image">
 					</div>
 					<li>Curabitur tortor lacus, consectetur ut maximus sollicitudin, tristique sed dui. Duis sodales nunc a malesuada malesuada. Nulla tincidunt vehicula felis, posuere semper elit tempor a. Pellentesque sem enim, viverra vitae ante ut, commodo convallis lacus.</li>
 				</ul>
@@ -33,7 +33,7 @@
 					<p class="byline">Idaho Becomes the first state in the Union to leave. Welcome to the Rep of Idaho.</p>
 					<p>Pellentesque pulvinar fringilla ligula, pellentesque volutpat mi. Suspendisse faucibus volutpat felis non blandit. Integer egestas tincidunt est eu tristique.</p>
 					<div class="thumbnail">
-					<img src="http://res.cloudinary.com/swy/image/upload/v1499750530/images/pexels-photo-403005.jpg" alt="murmur Alley image">
+					<img src="https://res.cloudinary.com/swy/image/upload/v1499750530/images/pexels-photo-403005.jpg" alt="murmur Alley image">
 					</div>
 				</article>
 			</section>
@@ -65,7 +65,7 @@
 				<p class="byline">Iceland on the cusp of utopia?</p>
 				<p>Sed id urna odio. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum tempus aliquet imperdiet. Maecenas ut neque id mi ornare varius. </p>
 				<div class="thumbnail">
-					<img src="http://res.cloudinary.com/swy/image/upload/v1499749887/images/001-desk-elements-escene-vector-flat-objects-design-studio.jpg" alt="murmur Alley image">
+					<img src="https://res.cloudinary.com/swy/image/upload/v1499749887/images/001-desk-elements-escene-vector-flat-objects-design-studio.jpg" alt="murmur Alley image">
 				</div>
 			</section>
 			</section>
